Enable Spark 1.4.0 local mode for Python and Scala
* Build Scala kernel against Spark 1.4.0
* Install Scala kernel spec
* Configure paths for pyspark